rtspsrc: Also handle redirect on PLAY

https://bugzilla.gnome.org/show_bug.cgi?id=772610